--- a/content/posts/20230525224610-专业人士需要打造自己的笔记系统.md
+++ b/content/posts/20230525224610-专业人士需要打造自己的笔记系统.md
@@ -58,7 +58,7 @@ author = "nigo"
 
 ## 思考工具 {#思考工具}
 
-前面推荐过[卡片盒笔记]({{< relref "20230430215727-卡片盒笔记.md" >}}) ，它更像是一个思考工具，将我们习得的知识和经验输出成笔记，而不是摘抄或复制。
+前面推荐过卡片盒笔记 ，它更像是一个思考工具，将我们习得的知识和经验输出成笔记，而不是摘抄或复制。
 
 {{< figure src="/ox-hugo/2023-05-25_22-57-00_screenshot.png" >}}
 
